// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders correctly with profile 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(0, 50, 120)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <RCTScrollView
    bounces={false}
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 50, 120)",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "width": 750,
            },
            Object {
              "alignItems": "stretch",
              "justifyContent": "space-between",
              "paddingBottom": 20,
              "paddingLeft": "9.375%",
              "paddingRight": "9.375%",
            },
            Object {
              "paddingBottom": 10,
            },
          ]
        }
      >
        <View
          contentContainerStyle={undefined}
          enabled={true}
          keyboardVerticalOffset={0}
          onLayout={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                undefined,
                Object {
                  "bottom": 0,
                },
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(0, 50, 120)",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/app/components/logo/images/pigzbe_logo_inapp.png",
                    }
                  }
                  style={
                    Object {
                      "height": 25,
                      "marginBottom": 10,
                      "marginTop": 34,
                      "width": 65,
                    }
                  }
                />
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "marginTop": 10,
                    "textAlign": "center",
                  }
                }
              >
                Edit Your Account?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginBottom": 20,
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/app/components/avatar/images/profile.png",
                    }
                  }
                  style={
                    Object {
                      "flexBasis": 92,
                      "flexGrow": 0,
                      "height": 92,
                      "marginTop": 20,
                      "width": 94,
                    }
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 0.6)",
                      "fontFamily": "Poppins",
                      "fontSize": 14,
                      "marginTop": 20,
                      "textAlign": "center",
                    }
                  }
                >
                  Change profile image?
                </Text>
              </View>
              <View
                style={
                  Object {
                    "height": 55,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  blurOnSubmit={true}
                  editable={true}
                  keyboardType="default"
                  maxLength={undefined}
                  multiline={false}
                  numberOfLines={1}
                  onChangeText={[Function]}
                  placeholder="Name"
                  placeholderTextColor="rgba(255, 255, 255, 0.6)"
                  returnKeyType="done"
                  style={
                    Array [
                      Object {
                        "alignSelf": "stretch",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 22.5,
                        "borderWidth": 1,
                        "color": "rgb(255, 255, 255)",
                        "fontFamily": "Poppins",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginBottom": 10,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 12,
                      },
                      Object {
                        "height": 45,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                    ]
                  }
                  value="Name"
                />
              </View>
              <View
                style={
                  Object {
                    "height": 55,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  blurOnSubmit={true}
                  editable={true}
                  keyboardType="email-address"
                  maxLength={undefined}
                  multiline={false}
                  numberOfLines={1}
                  onChangeText={[Function]}
                  placeholder="Email address"
                  placeholderTextColor="rgba(255, 255, 255, 0.6)"
                  returnKeyType="done"
                  style={
                    Array [
                      Object {
                        "alignSelf": "stretch",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 22.5,
                        "borderWidth": 1,
                        "color": "rgb(255, 255, 255)",
                        "fontFamily": "Poppins",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginBottom": 10,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 12,
                      },
                      Object {
                        "height": 45,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                    ]
                  }
                  value="mail@example.com"
                />
              </View>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 20,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontFamily": "Poppins",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "marginRight": 10,
                    }
                  }
                >
                  Get Pigzbe Updates
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 15,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 30,
                        "justifyContent": "center",
                        "width": 30,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(255, 255, 255)",
                          "borderRadius": 8,
                          "height": 16,
                          "opacity": 1,
                          "width": 16,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "rgb(253, 223, 6)",
                "borderColor": "rgb(253, 223, 6)",
                "borderRadius": 22.5,
                "borderWidth": 1,
                "marginBottom": 10,
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "rgb(0, 50, 120)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "height": 45,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Save
            </Text>
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "rgb(253, 223, 6)",
                "borderColor": "rgb(253, 223, 6)",
                "borderRadius": 22.5,
                "borderWidth": 1,
                "marginBottom": 10,
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "rgb(0, 50, 120)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "height": 45,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "rgb(0, 50, 120)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "height": 45,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(255, 255, 255, 0.7)",
                    "fontSize": 14,
                    "textDecorationColor": "rgb(255, 255, 255)",
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  },
                  undefined,
                ]
              }
            >
              Logout
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Profile renders correctly without profile 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(0, 50, 120)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <RCTScrollView
    bounces={false}
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 50, 120)",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "width": 750,
            },
            Object {
              "alignItems": "stretch",
              "justifyContent": "space-between",
              "paddingBottom": 20,
              "paddingLeft": "9.375%",
              "paddingRight": "9.375%",
            },
            Object {
              "paddingBottom": 20,
            },
          ]
        }
      >
        <View
          contentContainerStyle={undefined}
          enabled={true}
          keyboardVerticalOffset={0}
          onLayout={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                undefined,
                Object {
                  "bottom": 0,
                },
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(0, 50, 120)",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/app/components/logo/images/pigzbe_logo_inapp.png",
                    }
                  }
                  style={
                    Object {
                      "height": 25,
                      "marginBottom": 10,
                      "marginTop": 34,
                      "width": 65,
                    }
                  }
                />
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgb(255, 255, 255)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "marginTop": 10,
                    "textAlign": "center",
                  }
                }
              >
                Create Your Account
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginBottom": 20,
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/app/components/avatar/images/profile.png",
                    }
                  }
                  style={
                    Object {
                      "flexBasis": 92,
                      "flexGrow": 0,
                      "height": 92,
                      "marginTop": 20,
                      "width": 94,
                    }
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 0.6)",
                      "fontFamily": "Poppins",
                      "fontSize": 14,
                      "marginTop": 20,
                      "textAlign": "center",
                    }
                  }
                >
                  Add Profile Image
                </Text>
              </View>
              <View
                style={
                  Object {
                    "height": 55,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  blurOnSubmit={true}
                  editable={true}
                  keyboardType="default"
                  maxLength={undefined}
                  multiline={false}
                  numberOfLines={1}
                  onChangeText={[Function]}
                  placeholder="Name"
                  placeholderTextColor="rgba(255, 255, 255, 0.6)"
                  returnKeyType="done"
                  style={
                    Array [
                      Object {
                        "alignSelf": "stretch",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 22.5,
                        "borderWidth": 1,
                        "color": "rgb(255, 255, 255)",
                        "fontFamily": "Poppins",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginBottom": 10,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 12,
                      },
                      Object {
                        "height": 45,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                    ]
                  }
                  value={null}
                />
              </View>
              <View
                style={
                  Object {
                    "height": 55,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  blurOnSubmit={true}
                  editable={true}
                  keyboardType="email-address"
                  maxLength={undefined}
                  multiline={false}
                  numberOfLines={1}
                  onChangeText={[Function]}
                  placeholder="Email address"
                  placeholderTextColor="rgba(255, 255, 255, 0.6)"
                  returnKeyType="done"
                  style={
                    Array [
                      Object {
                        "alignSelf": "stretch",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 22.5,
                        "borderWidth": 1,
                        "color": "rgb(255, 255, 255)",
                        "fontFamily": "Poppins",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginBottom": 10,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 12,
                      },
                      Object {
                        "height": 45,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                    ]
                  }
                  value={null}
                />
              </View>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 20,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgb(255, 255, 255)",
                      "fontFamily": "Poppins",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "marginRight": 10,
                    }
                  }
                >
                  Get Pigzbe Updates
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgb(255, 255, 255)",
                        "borderRadius": 15,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "height": 30,
                        "justifyContent": "center",
                        "width": 30,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(255, 255, 255)",
                          "borderRadius": 8,
                          "height": 16,
                          "opacity": 1,
                          "width": 16,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "rgb(253, 223, 6)",
                "borderColor": "rgb(253, 223, 6)",
                "borderRadius": 22.5,
                "borderWidth": 1,
                "marginBottom": 10,
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "rgb(0, 50, 120)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "height": 45,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Next
            </Text>
          </View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "rgb(0, 50, 120)",
                    "fontFamily": "Poppins",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "height": 45,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(255, 255, 255, 0.7)",
                    "fontSize": 14,
                    "textDecorationColor": "rgb(255, 255, 255)",
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  },
                  undefined,
                ]
              }
            >
              Privacy Policy
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
